--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.0.1",
     "firebase-tools": "^8.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
