--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
     "firebase-tools": "^8.14.1",
+    "module": "^1.2.5",
+    "node": "^15.4.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
