--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # Runs a single command using the runner's shell
       #SETUP NODEJS
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
@@ -38,9 +38,10 @@ jobs:
           cmd: install
       
       - name: creating build
-        run: npm run-script build
+        run: npm build
       
-      - name: Installin surge
+      
+      - name: Installing surge
         run: npm install -g surge
         
       - name: Deploying Surge
