--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
  
       
       - name: creating build
-        run: npm run build
+        run: npm install -g yarn
+      - name: yarn build
+        run: yarn build
       
       
       - name: Installing surge
